force-app/main/default/objects/Lead/fields/Plan_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Plan_Eligibility__c</fullName>
    <label>Plan Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>One Month</fullName>
            </value>
            <value>
                <fullName>Two Months</fullName>
            </value>
            <value>
                <fullName>Three Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>1 Year (1000 Hours)</fullName>
            </value>
            <value>
                <fullName>90 Day</fullName>
            </value>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>12 Months Elapsed Time</fullName>
                <isActive>false</isActive>
                <label>12 Months Elapsed Time</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>