force-app/main/default/objects/Lead/fields/Plan_Purchase_ID__c.field-meta.xml
<CustomField>
    <fullName>Plan_Purchase_ID__c</fullName>
    <label>Plan Purchase ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>