force-app/main/default/objects/Lead/fields/Post_Costco_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Post_Costco_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Costco is lead source and this box is True and after 5/10/2014, then OK to email or call.  If False, then DO NOT CALL OR EMAIL.</description>
    <label>Post Costco Opt In</label>
    <type>Checkbox</type>
</CustomField>