force-app/main/default/objects/Lead/fields/Product_Type_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Recommendation__c</fullName>
    <description>Product Type recommended by the Recommendation engine.</description>
    <inlineHelpText>Product Type recommended by the Recommendation engine.</inlineHelpText>
    <label>Product Type Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>401(k)</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>