force-app/main/default/objects/Lead/fields/Proposal_Type__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Type__c</fullName>
    <description>Used for reporting back to Principal for Simply</description>
    <formula>IF(ISPICKVAL(Stage_Flag__c,&quot;&quot;),&quot;Proposal Only&quot;,
IF(ISPICKVAL(Stage_Flag__c,&quot;Review&quot;), &quot;Proposal Only&quot;, &quot;Proposal with Action&quot; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for reporting back to Principal for Simply</inlineHelpText>
    <label>Proposal Type</label>
    <type>Text</type>
</CustomField>