force-app/main/default/objects/Lead/fields/Quarter_Created__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Created__c</fullName>
    <description>Used for Year over year reporting</description>
    <formula>CASE( MONTH (DATEVALUE( CreatedDate )) , 1, &quot;Q1&quot;, 2, &quot;Q1&quot;, 3, &quot;Q1&quot;, 4, &quot;Q2&quot;, 5, &quot;Q2&quot;, 6, &quot;Q2&quot;, 7, &quot;Q3&quot;, 8, &quot;Q3&quot;, 9, &quot;Q3&quot;, &quot;Q4&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter Created</label>
    <type>Text</type>
</CustomField>