force-app/main/default/objects/Lead/fields/Recommendation_Engine_Results__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Engine_Results__c</fullName>
    <description>Full results from the recommendation engine.</description>
    <inlineHelpText>Full results from the recommendation engine.</inlineHelpText>
    <label>Recommendation Engine Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>