force-app/main/default/objects/Lead/fields/Referral_Info_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Referral_Info_Last_Name__c</fullName>
    <label>Referral Info (Last Name)</label>
    <type>TextArea</type>
</CustomField>