force-app/main/default/objects/Lead/fields/Referral_program__c.field-meta.xml
<CustomField>
    <fullName>Referral_program__c</fullName>
    <description>How did the referrer learn about Ubiquity&apos;s Referral Program?</description>
    <inlineHelpText>How did the referrer learn about Ubiquity&apos;s Referral Program?</inlineHelpText>
    <label>How did you hear about referral program?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ubiquity Employee</fullName>
            </value>
            <value>
                <fullName>Ubiquity Newsletter/Email</fullName>
            </value>
            <value>
                <fullName>Ubiquity Website</fullName>
            </value>
            <value>
                <fullName>News/Media</fullName>
            </value>
            <value>
                <fullName>Friend_Family</fullName>
                <label>Friend/Family</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>