force-app/main/default/objects/Lead/fields/ReferralInfo__c.field-meta.xml
<CustomField>
    <fullName>ReferralInfo__c</fullName>
    <label>Referral Info</label>
    <type>TextArea</type>
</CustomField>