force-app/main/default/objects/Lead/fields/Referrer_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Referrer_s_Email__c</fullName>
    <description>Email address of referrer</description>
    <inlineHelpText>Email address of referrer</inlineHelpText>
    <label>Referrer&apos;s Email</label>
    <type>Email</type>
</CustomField>