force-app/main/default/objects/Lead/fields/Robin_Assign__c.field-meta.xml
<CustomField>
    <fullName>Robin_Assign__c</fullName>
    <formula>VALUE( Lead_Number__c )   +   Robin_Calc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Robin Assign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>