force-app/main/default/objects/Lead/fields/Robin_Calc__c.field-meta.xml
<CustomField>
    <fullName>Robin_Calc__c</fullName>
    <formula>IF( Robin_Lead__c  = &apos;401&apos;,0, -10000000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Robin Calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>