force-app/main/default/objects/Lead/fields/Robin_Lead__c.field-meta.xml
<CustomField>
    <fullName>Robin_Lead__c</fullName>
    <formula>IF(TEXT(LeadSource) = &quot;Intuit 401(k)&quot;, &apos;401&apos;, 
IF(TEXT(LeadSource) = &quot;COSTCO&quot;, &apos;401&apos;, null 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Robin Lead</label>
    <type>Text</type>
</CustomField>