force-app/main/default/objects/Lead/fields/Safe_Harbor_CF__c.field-meta.xml
<CustomField>
    <fullName>Safe_Harbor_CF__c</fullName>
    <description>Safe Harbor descriptions used for client facing communication</description>
    <inlineHelpText>Safe Harbor descriptions used for client facing communication</inlineHelpText>
    <label>Safe Harbor CF</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Safe_Harbor__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Match 100% of deferrals up to 4% of compensation</fullName>
            </value>
            <value>
                <fullName>Match 100% of deferrals up to 5% of compensation</fullName>
            </value>
            <value>
                <fullName>Match 100% of deferrals up to 6% of compensation</fullName>
            </value>
            <value>
                <fullName>Match 100% of deferrals on the first 3% of compensation, plus 50% of deferrals on the next 2% of compensation (if the eligible employee defers 5% they will receive a 4% match)</fullName>
            </value>
            <value>
                <fullName>Contribute 3% of eligible employee compensation</fullName>
            </value>
            <value>
                <fullName>Match of 100% of deferrals on the first 1% of compensation, plus 50% of deferrals on the next 5% of compensation (Ex: if employee defers 6% they will receive a 3.5% match)</fullName>
            </value>
            <value>
                <fullName>Match 100% of employee deferrals up to 3.5% of compensation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>