force-app/main/default/objects/Lead/fields/Self_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Self_Purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked is prospect enters self-purchase processes.</description>
    <inlineHelpText>Checked is prospect enters self-purchase processes.</inlineHelpText>
    <label>Self-Purchase</label>
    <type>Checkbox</type>
</CustomField>