force-app/main/default/objects/Lead/fields/Service_Option_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Service_Option_Recommendation__c</fullName>
    <description>Service Option recommended to prospect by Recommendation Engine.</description>
    <inlineHelpText>Service Option recommended to prospect by Recommendation Engine.</inlineHelpText>
    <label>Service Option Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saver(k)</fullName>
            </value>
            <value>
                <fullName>Custom(k)</fullName>
            </value>
            <value>
                <fullName>Reserve(k)</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
            </value>
            <value>
                <fullName>Single(k) Plus</fullName>
            </value>
            <value>
                <fullName>Express(k)</fullName>
                <isActive>false</isActive>
                <label>Express(k)</label>
            </value>
            <value>
                <fullName>Legacy Saver(k)</fullName>
                <isActive>false</isActive>
                <label>Legacy Saver(k)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>