force-app/main/default/objects/Lead/fields/Split_Opp__c.field-meta.xml
<CustomField>
    <fullName>Split_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that there will be a revenue split on the related Opportunity</inlineHelpText>
    <label>Split Opp</label>
    <type>Checkbox</type>
</CustomField>