force-app/main/default/objects/Lead/fields/Time_to_Action_SLA_Met__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Action_SLA_Met__c</fullName>
    <description>For Sales Teams the Time to Action SLA is 4 Hours or 240 minutes</description>
    <formula>IF( n2de__Time_to_action_mins__c  &lt;= 240, True, False)</formula>
    <inlineHelpText>For Sales Teams the Time to Action SLA is 4 Hours or 240 minutes</inlineHelpText>
    <label>Time to Action SLA Met</label>
    <type>Checkbox</type>
</CustomField>