force-app/main/default/objects/Lead/fields/TimeframeQuotes__c.field-meta.xml
<CustomField>
    <fullName>TimeframeQuotes__c</fullName>
    <inlineHelpText>here&apos;s the timeframes from quotes page</inlineHelpText>
    <label>TimeframeQuotes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Within the next 30 days</fullName>
            </value>
            <value>
                <fullName>In 31-60 days</fullName>
            </value>
            <value>
                <fullName>In 61-90 days</fullName>
            </value>
            <value>
                <fullName>Greater than 90 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>