force-app/main/default/objects/Lead/fields/Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason__c</fullName>
    <description>The reason why the Lead is Unqualified.</description>
    <inlineHelpText>The reason why the Lead is Unqualified.</inlineHelpText>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advisor Lead Not Produced</fullName>
            </value>
            <value>
                <fullName>Advisor Testing</fullName>
            </value>
            <value>
                <fullName>Bad Data</fullName>
            </value>
            <value>
                <fullName>Company No Longer In Business</fullName>
            </value>
            <value>
                <fullName>Company Too Large for Current Offering</fullName>
            </value>
            <value>
                <fullName>Cost Issue</fullName>
            </value>
            <value>
                <fullName>Covid-19 Delay</fullName>
            </value>
            <value>
                <fullName>Existing Retirement Benefit in Place</fullName>
            </value>
            <value>
                <fullName>Junk</fullName>
            </value>
            <value>
                <fullName>Left Company</fullName>
            </value>
            <value>
                <fullName>Looking to Product Outside of Current Offering</fullName>
            </value>
            <value>
                <fullName>Needs More Education</fullName>
            </value>
            <value>
                <fullName>No Authority to Buy</fullName>
            </value>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>No Opportunity for Partnership</fullName>
            </value>
            <value>
                <fullName>Not a True Lead</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Not Serious Buyer</fullName>
            </value>
            <value>
                <fullName>Outside of ICP</fullName>
            </value>
            <value>
                <fullName>Prospect Unresponsive</fullName>
            </value>
            <value>
                <fullName>Prospect Unresponsive &amp; Bad Email</fullName>
            </value>
            <value>
                <fullName>Prospect Unresponsive &amp; Bad Phone Number</fullName>
            </value>
            <value>
                <fullName>Support Request</fullName>
            </value>
            <value>
                <fullName>Timing Issue</fullName>
            </value>
            <value>
                <fullName>Unfit for Simply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>