force-app/main/default/objects/Lead/fields/Working_Lead__c.field-meta.xml
<CustomField>
    <fullName>Working_Lead__c</fullName>
    <formula>IF((ISPICKVAL(Status, &quot;Open&quot;)
|| ISPICKVAL(Status, &quot;Assigned&quot;)
|| ISPICKVAL(Status, &quot;Working&quot;)
),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Working Lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>