force-app/main/default/objects/Lead/fields/X3_38__c.field-meta.xml
<CustomField>
    <fullName>X3_38__c</fullName>
    <description>3(38) Fiduciary used on plan</description>
    <inlineHelpText>3(38) Fiduciary used on plan</inlineHelpText>
    <label>3(38)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>COTA Street</fullName>
            </value>
            <value>
                <fullName>Wilshire</fullName>
            </value>
            <value>
                <fullName>Kaye Capital</fullName>
            </value>
            <value>
                <fullName>Kaye Capital ESG</fullName>
            </value>
            <value>
                <fullName>Morningstar</fullName>
            </value>
            <value>
                <fullName>Lockton</fullName>
            </value>
            <value>
                <fullName>NFP</fullName>
            </value>
            <value>
                <fullName>GRP</fullName>
            </value>
            <value>
                <fullName>OneDigital</fullName>
            </value>
            <value>
                <fullName>MML</fullName>
            </value>
            <value>
                <fullName>SRP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>