force-app/main/default/objects/Lead/fields/yearlyAutoDeferralPercentageIncrease__c.field-meta.xml
<CustomField>
    <fullName>yearlyAutoDeferralPercentageIncrease__c</fullName>
    <label>yearlyAutoDeferralPercentageIncrease</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>