force-app/main/default/objects/Lead/fields/Zenefits_Integrated_Payroll_Provider__c.field-meta.xml
<CustomField>
    <fullName>Zenefits_Integrated_Payroll_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Qualify a Zenefits Lead that does not come directly from Zenefits please make sure their payroll provider integrates</description>
    <inlineHelpText>To Qualify a Zenefits Lead that does not come directly from Zenefits please make sure their payroll provider integrates</inlineHelpText>
    <label>Zenefits Integrated Payroll Provider</label>
    <type>Checkbox</type>
</CustomField>