force-app/main/default/objects/Lead/recordTypes/Ubiquity_Lead.recordType-meta.xml
<RecordType>
    <fullName>Ubiquity_Lead</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <description>Used for All Employer Leads</description>
    <label>Ubiquity Lead</label>
</RecordType>