force-app/main/default/objects/Lead/validationRules/Advisor_Lead_Associated_Partners.validationRule-meta.xml
<ValidationRule>
    <fullName>Advisor_Lead_Associated_Partners</fullName>
    <active>true</active>
    <description>Makes sure Associated Partner is completed for Advisor leads</description>
    <errorConditionFormula>ISPICKVAL( LeadSource , &quot;Advisor&quot;)
&amp;&amp;
NOT(ISPICKVAL( Lead_Type__c, &quot;Advisor&quot;))
&amp;&amp;
( ISBLANK(  Associated_Partner__c  ) =  TRUE)
&amp;&amp;
 Eligible_for_Contact_Merge__c = FALSE
&amp;&amp;
 NOT(ISPICKVAL(Status,&quot;Unable to Qualify&quot;))</errorConditionFormula>
    <errorMessage>Please add Associated Partner for Advisor leads</errorMessage>
</ValidationRule>