force-app/main/default/objects/Lead/validationRules/Connected_Partner_Rep.validationRule-meta.xml
<ValidationRule>
    <fullName>Connected_Partner_Rep</fullName>
    <active>false</active>
    <description>Connected Partner Rep is required for Schwab Leads</description>
    <errorConditionFormula>ISPICKVAL(Connected_Partner__c, &quot;Schwab&quot;) &amp;&amp;
ISBLANK(Connected_Partner_Rep__c)</errorConditionFormula>
    <errorDisplayField>Connected_Partner_Rep__c</errorDisplayField>
    <errorMessage>Connected Partner Rep is required for Schwab Leads</errorMessage>
</ValidationRule>