force-app/main/default/objects/Lead/validationRules/JMP_Assoc_Contact_and_Assoc_Partner.validationRule-meta.xml
<ValidationRule>
    <fullName>JMP_Assoc_Contact_and_Assoc_Partner</fullName>
    <active>false</active>
    <description>Assoc Contact &amp; Assoc Partner required for JPM leads to be converted</description>
    <errorConditionFormula>AND(
 ISPICKVAL( Status , &quot;Qualified&quot;),
 ISPICKVAL( LeadSourceDetail__c , &quot;JPM&quot;),
(OR(
 ISBLANK( Associated_Contact__c ), 
 ISBLANK( Associated_Partner__c ))))&amp;&amp;
Eligible_for_Contact_Merge__c = FALSE</errorConditionFormula>
    <errorMessage>Both the Associated Contact and Associated Partner are required to convert this lead</errorMessage>
</ValidationRule>