force-app/main/default/objects/Lead/validationRules/Number_of_Employees_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_Employees_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNULL(NumberOfEmployees), 
ISPICKVAL(Status,&quot;Qualified&quot;),
NOT(ISPICKVAL( Lead_Type__c, &quot;Advisor&quot;)),
NOT(ISPICKVAL( Lead_Type__c, &quot;TPA&quot;))) &amp;&amp;
RecordType.Name != &quot;Business Development&quot; &amp;&amp;
Eligible_for_Contact_Merge__c = FALSE</errorConditionFormula>
    <errorDisplayField>NumberOfEmployees</errorDisplayField>
    <errorMessage>No. of Employees is required</errorMessage>
</ValidationRule>