force-app/main/default/objects/Lead/validationRules/Validate_Business_Industry.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Business_Industry</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status , &quot;Qualified&quot; )
&amp;&amp;
ISPICKVAL( Product_Type__c , &quot;401(k)&quot; ) 
&amp;&amp; 
(ISPICKVAL(Business_Industry__c, &quot;Not Yet Known&quot;)  || ISPICKVAL(Business_Industry__c, &quot;&quot;))
&amp;&amp; 
Owner:User.LastName &lt;&gt; &quot;Claxton,Parks&quot;
&amp;&amp; 
NOT(ISPICKVAL( Business_Unit__c, &quot;Simply Retirement&quot;))
&amp;&amp;
NOT(ISPICKVAL( LeadSourceDetail__c , &quot;Sallus&quot;))
&amp;&amp;
NOT(ISPICKVAL(LeadSource,&quot;MML&quot;))</errorConditionFormula>
    <errorDisplayField>Business_Industry__c</errorDisplayField>
    <errorMessage>Please confirm the Business Industry before converting</errorMessage>
</ValidationRule>