force-app/main/default/objects/Lead/validationRules/Validate_Email_OnConvert.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Email_OnConvert</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Status,&quot;Qualified&quot;) &amp;&amp; ISBLANK( Email) &amp;&amp; $UserRole.Name = &quot;Outside_Sales_Consultant&quot;</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Please confirm email address before updating/converting</errorMessage>
</ValidationRule>